<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.NuevoVehiculo_Activity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBtn"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!--Activity Content-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_placa"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txt_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/input_marca"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txt_costo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/input_costo"
                    android:inputType="numberDecimal" />


                <TextView
                    android:id="@+id/txt_Color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Color"
                    android:textSize="18dp" />

                <CheckBox
                    android:id="@+id/chk_Rojo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rojo" />

                <CheckBox
                    android:id="@+id/chk_Plomo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Plomo" />

                <CheckBox
                    android:id="@+id/chk_Azul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Azul" />

                <CheckBox
                    android:id="@+id/chk_Verde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Verde" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fecha fabricación:"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:hint="Seleccione"
                        android:onClick="showDataPicker"
                        android:textSize="18dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/sw_enrollment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/switch_matriculado"
                        android:textSize="18dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="save"
                    android:text="@string/save" />

            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>